--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,10 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.9.0,<3.10"
+python = ">=3.10"
 numpy = "^1.22.2"
-replit = "^3.2.4"
-Flask = "^2.2.0"
 montydb = "^2.4.0"
-meowerbot = "^2.1.1"
+meowerbot = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
