--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,14 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.10,<3.11"
 numpy = "^1.22.2"
 montydb = "^2.4.0"
-meowerbot = "^2.2.0"
+meowerbot = "^2.4.3"
+python-dotenv = "^0.21.1"
+pymongo = "^4.3.3"
 
 [tool.poetry.dev-dependencies]
-debugpy = "^1.6.2"
-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
-toml = "^0.10.2"
-
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
